--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: scopy
 Section: non-free/science
 Priority: optional
 Maintainer: Uberscopes d.o.o. <matej.kenda@uberscopes.com>
-Build-Depends: debhelper (>= 11), cmake, dh-make, doxygen, dot, qtbase5-dev, flex, bison, qttools5-dev, qt5-default, libboost-date-time-dev, libboost-program-options-dev, libboost-filesystem-dev, libboost-system-dev, libboost-regex-dev, libboost-thread-dev, libxml2-dev, libmatio-dev, libiio-dev, libvolk1-dev, libzmq3-dev, libad9361-dev, libzip-dev, python-cheetah, python-markdown, libfftw3-dev, libffi-dev, libmount-dev, libpcre3-dev, libglib2.0-dev, libsigc++-2.0-dev, libglibmm-2.4-dev, libglu1-mesa-dev, libusb-1.0-0-dev, libsigrok-dev, libsigrokcxx-dev, libsigrokdecode-dev
+Build-Depends: debhelper (>= 11), cmake, dh-make, doxygen, graphviz, qtbase5-dev, flex, bison, qttools5-dev, qt5-default, qtdeclarative5-dev, libqt5svg5-dev, libboost-date-time-dev, libboost-program-options-dev, libboost-filesystem-dev, libboost-system-dev, libboost-regex-dev, libboost-thread-dev, libxml2-dev, libmatio-dev, libiio-dev (>=0.15), libvolk1-dev, libzmq3-dev, libad9361-dev, libzip-dev, python-cheetah, python-markdown, libfftw3-dev, libffi-dev, libmount-dev, libpcre3-dev, libglib2.0-dev, libsigc++-2.0-dev, libglibmm-2.4-dev, libglu1-mesa-dev, libusb-1.0-0-dev, libsigrok-dev, libsigrokcxx-dev, libsigrokdecode-dev
 Standards-Version: 4.1.3
 Homepage: http://www.uberscopes.com
 #Vcs-Git: https://github.org/matejk/scopy.git
